tests/query_errors/window_mut_meta/error.txt
Error: 
    6 |   let $ = a
      |       ^^^^^ Can not assign to `$` here